--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electronmon": "^2.0.2",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
+    "express-paginate": "^1.0.2",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
